🪠BugFix: Fix template broken css and broken javascript.

--- a/kotlin-js-template/styles.css
+++ b/kotlin-js-template/styles.css
@@ -5,3 +5,16 @@ html, body {
     padding: 0;
     overflow: hidden;
 }
+
+.internal {
+    width: 100%;
+    height: 100%;
+}
+
+.container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
